[project]
name = "volume-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "src"}]


[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
sqlalchemy = "^2.0.41"
logging = "^0.4.9.6"
pytest = "^8.4.1"
fastcrud = "^0.15.12"
aiosqlite = "^0.21.0"
asyncclick = "^8.1.8"
httpx = "^0.28.1"
rich = "^14.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
